feat: comprehensive CI/CD pipeline improvements
- Enhanced CI workflow with caching, race detection, and coverage
- Improved golangci-lint workflow with proper permissions and configuration
- Added comprehensive .golangci.yml configuration with 50+ linters
- Added security workflow for vulnerability scanning (govulncheck, Nancy)
- Added automated release workflow for version tags
- Added dependency update workflow with weekly automation
- Added Makefile for local development with common tasks
- Added CONTRIBUTING.md with development guidelines
- Added CI_CD_IMPROVEMENTS.md documenting all changes

This makes the pipeline production-ready with automated testing,
security scanning, dependency management, and releases.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,19 +7,36 @@ on:
     branches: [ main ]
 
 jobs:
-
-  build:
+  test:
+    name: Test
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go-version: [1.24.x]
     steps:
-    - uses: actions/checkout@v5
+    - name: Checkout code
+      uses: actions/checkout@v5
 
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: 1.24
+        go-version: ${{ matrix.go-version }}
+        cache: true
+
+    - name: Download dependencies
+      run: go mod download
+
+    - name: Verify dependencies
+      run: go mod verify
 
     - name: Build
       run: go build -v ./...
 
     - name: Test
-      run: go test -v ./...
+      run: go test -race -coverprofile=coverage.out -covermode=atomic -v ./...
+
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v4
+      with:
+        file: ./coverage.out
+        fail_ci_if_error: false
